# esercizi

./: .gitignore
clock/: AlarmSwitch.qml  Button.qml  CMakeLists.txt  Counter.qml  Main.qml  PageAlarm.qml  PageAlarmList.qml  PageHome.qml  assets.qrc  clockobject.cpp  clockobject.h  main.cpp
clock/clock1_1/clock1_1/: Button.qml  CMakeLists.txt  Main.qml
cpp/es1.1/: CMakeLists.txt  mediaEdoardo.cpp
cpp/es1.2/: CMakeLists.txt  medianaEdoardo.cpp
cpp/es1.3/: CMakeLists.txt  canto1.txt  modaEdoardo.cpp
cpp/es2.1/: CMakeLists.txt  dateEdoardo  dateEdoardo.cpp
cpp/es3.1/: CMakeLists.txt  rubricaEdoardo.cpp
qml/es1_1/es1_1/: CMakeLists.txt  Main.qml  SwitchButton.qml  main.cpp
qml/es1_2/es1_2/: Bar.qml  CMakeLists.txt  Main.qml  main.cpp
qml/es1_3/es1_3/: CMakeLists.txt  Chapter.qml  Main.qml  Main.qml.autosave  main.cpp
qml/es2_1/es2_1/: CMakeLists.txt  Details.qml  Main.qml  Recipes.qml  main.cpp  recipesmodel.cpp  recipesmodel.h
